--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Fake JSON API</title>
-</head>
-<body><strong>Empty body</strong>
-</body>
-</html>
+{% extends "/shared/_layout.html" %}
+
+{% block content %}
+        <div class="content">
+            <h1><span class="font-semi-bold">Mock JSON API parser</span> <span class="smaller">a RESTful API mock data parser service</span></h1>
+            <p class="lead">
+                JSON data parser service<br>
+                <br>
+                <strong>API endpoints:</strong>
+            <ul>
+                <li>
+                    <strong>Search movies</strong><br>
+                    <a href="/api/search/run">GET /api/search/{keyword}</a>
+                </li>
+                <li>
+                    <strong>Movies by director</strong><br>
+                    <a href="/api/director/cameron">GET /api/director/{director_name}</a>
+                </li>
+            </ul>
+            </p>
+        </div>
+
+{% endblock %}
