--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,19 +2,19 @@
 
 {% block content %}
         <div class="content">
-            <h1><span class="font-semi-bold">Mock JSON API parser</span> <span class="smaller">a RESTful API mock data parser service</span></h1>
+            <h1><span class="font-semi-bold">Mock employees API parser</span></h1>
             <p class="lead">
-                JSON data parser service<br>
+                A RESTful API mock employees data parser service<br>
                 <br>
                 <strong>API endpoints:</strong>
             <ul>
                 <li>
-                    <strong>Search movies</strong><br>
-                    <a href="/api/search/run">GET /api/search/{keyword}</a>
+                    <strong>Search employees by keyword</strong><br>
+                    <a href="/api/search/rom">GET /api/search/{keyword}</a>
                 </li>
                 <li>
-                    <strong>Movies by director</strong><br>
-                    <a href="/api/director/cameron">GET /api/director/{director_name}</a>
+                    <strong>Search employee by id</strong><br>
+                    <a href="/api/director/cameron">GET /api/employee/{id}</a>
                 </li>
             </ul>
             </p>
