Implement backend workflow for employees API

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,7 +14,7 @@
                 </li>
                 <li>
                     <strong>Search employee by id</strong><br>
-                    <a href="/api/employee/2">GET /api/employee/{id}</a>
+                    <a href="/api/employee/2">GET /api/employee/{identifier}</a>
                 </li>
             </ul>
             </p>
